# vscode-python-fastapi

./: .dockerignore  .editorconfig  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: code-quality.yaml  reviewdog.yml
app/: main.py  test_main.py
app/config/: database.py  test_database.py
containers/: Dockerfile.development
